# uzumaki_slack_chatgpt

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
slack_app/: app.py  chatgpt_test.py
slack_app/controller/: base.py  chatgpt.py
slack_app/model/: chatgpt.py
